--- a/html/_/index.html
+++ b/html/_/index.html
@@ -664,6 +664,12 @@ crossorigin=""/>
           </a>
         </li>
         <li class="nav-item">
+          <a href="#tab9info" data-toggle="pill" aria-controls="tab5info" aria-selected="false" class="nav-link" id="pills-tab9">
+            <span lang="fr">Parfums Emblématiques</span>
+            <span lang="en">Iconic Perfumes</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab10">
             <span lang="fr">Autres Remarques</span>
             <span lang="en">Other Comments</span>
@@ -979,6 +985,278 @@ crossorigin=""/>
   </p>
 </div>    
 </div>
+</div>
+</div>
+
+<!-- Onglet Parfums Emblématiques-->
+<div class="tab-pane fade" id="tab9info"  role="tabpanel" aria-labelledby="pills-tab9">
+<div class="container-fluid">
+<div class="row">
+<div class="col-12 panelcontent">
+    <div class="row mt-1" style="text-align: justify;">
+      <span lang="fr">Afin de vous permettre d'en découvrir d'avantage sur les ingrédients de ScenTree, nous nous sommes associé avec l'emblématique société "<a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a>". Ce partenariat nous permet de vous afficher, pour chaque ingrédient, jusqu'a 8 parfums emblématiques ! </span>
+      <span lang="en">To allow you to discover more about ScenTree's ingredients, we have partnered with the iconic company "Fragrances of the world". This partnership allows us to show you, for each ingredient, up to 8 emblematic fragrances! </span>
+    </div>
+
+    <!--FORMAT MOBILE-->
+    <div class="mousenotavailable">
+      <div class = "row mt-3">
+        <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+        <div class = "detailsmini col-6">
+          <span class="titledetails">PERFUME NAME</span>
+          <br>
+          <span class="datedetails">LAUNCH DATE</span>
+          <br>
+          <span class="branddetails">BRAND</span>
+          <br>
+          <span class="familydetails">OLFACTIVE FAMILY</span>
+          <br>
+          <span class="perfumeurdetails">PERFUMER</span>
+        </div>
+      </div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class = "row mt-3">
+        <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+        <div class = "detailsmini col-6">
+          <span class="titledetails">PERFUME NAME</span>
+          <br>
+          <span class="datedetails">LAUNCH DATE</span>
+          <br>
+          <span class="branddetails">BRAND</span>
+          <br>
+          <span class="familydetails">OLFACTIVE FAMILY</span>
+          <br>
+          <span class="perfumeurdetails">PERFUMER</span>
+        </div>
+      </div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class = "row mt-3">
+        <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+        <div class = "detailsmini col-6">
+          <span class="titledetails">PERFUME NAME</span>
+          <br>
+          <span class="datedetails">LAUNCH DATE</span>
+          <br>
+          <span class="branddetails">BRAND</span>
+          <br>
+          <span class="familydetails">OLFACTIVE FAMILY</span>
+          <br>
+          <span class="perfumeurdetails">PERFUMER</span>
+        </div>
+      </div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class = "row mt-3">
+        <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+        <div class = "detailsmini col-6">
+          <span class="titledetails">PERFUME NAME</span>
+          <br>
+          <span class="datedetails">LAUNCH DATE</span>
+          <br>
+          <span class="branddetails">BRAND</span>
+          <br>
+          <span class="familydetails">OLFACTIVE FAMILY</span>
+          <br>
+          <span class="perfumeurdetails">PERFUMER</span>
+        </div>
+      </div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class = "row mt-3">
+        <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+        <div class = "detailsmini col-6">
+          <span class="titledetails">PERFUME NAME</span>
+          <br>
+          <span class="datedetails">LAUNCH DATE</span>
+          <br>
+          <span class="branddetails">BRAND</span>
+          <br>
+          <span class="familydetails">OLFACTIVE FAMILY</span>
+          <br>
+          <span class="perfumeurdetails">PERFUMER</span>
+        </div>
+      </div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class = "row mt-3">
+        <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+        <div class = "detailsmini col-6">
+          <span class="titledetails">PERFUME NAME</span>
+          <br>
+          <span class="datedetails">LAUNCH DATE</span>
+          <br>
+          <span class="branddetails">BRAND</span>
+          <br>
+          <span class="familydetails">OLFACTIVE FAMILY</span>
+          <br>
+          <span class="perfumeurdetails">PERFUMER</span>
+        </div>
+      </div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class = "row mt-3">
+        <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+        <div class = "detailsmini col-6">
+          <span class="titledetails">PERFUME NAME</span>
+          <br>
+          <span class="datedetails">LAUNCH DATE</span>
+          <br>
+          <span class="branddetails">BRAND</span>
+          <br>
+          <span class="familydetails">OLFACTIVE FAMILY</span>
+          <br>
+          <span class="perfumeurdetails">PERFUMER</span>
+        </div>
+      </div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+      <div class = "row mt-3">
+        <img class="col-6" src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+        <div class = "detailsmini col-6">
+          <span class="titledetails">PERFUME NAME</span>
+          <br>
+          <span class="datedetails">LAUNCH DATE</span>
+          <br>
+          <span class="branddetails">BRAND</span>
+          <br>
+          <span class="familydetails">OLFACTIVE FAMILY</span>
+          <br>
+          <span class="perfumeurdetails">PERFUMER</span>
+        </div>
+      </div>
+      <div class="col-12 mt-0 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#"> Fragrances of the world</a></div>
+    </div>
+
+    <!--FORMAT NON MOBILE-->
+    <div class="mouseavailable">
+      <!--1ère ligne--> 
+      <div class = "row mt-3">
+        <div class = "frame col-3">
+          <img src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+          <div class = "details">
+            <h1 class="titledetails">PERFUME NAME</h1>
+            <br>
+            <span class="datedetails">LAUNCH DATE</span>
+            <br>
+            <span class="branddetails">BRAND</span>
+            <br>
+            <span class="familydetails">OLFACTIVE FAMILY</span>
+            <br>
+            <span class="perfumeurdetails">PERFUMER</span>
+          </div>
+        </div> 
+        <div class = "frame col-3">
+          <img src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+          <div class = "details">
+            <h1 class="titledetails">PERFUME NAME</h1>
+            <br>
+            <span class="datedetails">LAUNCH DATE</span>
+            <br>
+            <span class="branddetails">BRAND</span>
+            <br>
+            <span class="familydetails">OLFACTIVE FAMILY</span>
+            <br>
+            <span class="perfumeurdetails">PERFUMER</span>
+          </div>
+        </div> 
+        <div class = "frame col-3">
+          <img src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+          <div class = "details">
+            <h1 class="titledetails">PERFUME NAME</h1>
+            <br>
+            <span class="datedetails">LAUNCH DATE</span>
+            <br>
+            <span class="branddetails">BRAND</span>
+            <br>
+            <span class="familydetails">OLFACTIVE FAMILY</span>
+            <br>
+            <span class="perfumeurdetails">PERFUMER</span>
+          </div>
+        </div>
+        <div class = "frame col-3">
+          <img src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+          <div class = "details">
+            <h1 class="titledetails">PERFUME NAME</h1>
+            <br>
+            <span class="datedetails">LAUNCH DATE</span>
+            <br>
+            <span class="branddetails">BRAND</span>
+            <br>
+            <span class="familydetails">OLFACTIVE FAMILY</span>
+            <br>
+            <span class="perfumeurdetails">PERFUMER</span>
+          </div>
+        </div> 
+      </div>
+      <div class="row mt-1 mb-0">
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
+      </div>
+      <!--2ème ligne-->
+      <div class = "mt-5 row">
+        <div class = "frame col-3">
+          <img src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+          <div class = "details">
+            <h1 class="titledetails">PERFUME NAME</h1>
+            <br>
+            <span class="datedetails">LAUNCH DATE</span>
+            <br>
+            <span class="branddetails">BRAND</span>
+            <br>
+            <span class="familydetails">OLFACTIVE FAMILY</span>
+            <br>
+            <span class="perfumeurdetails">PERFUMER</span>
+          </div>
+        </div> 
+        <div class = "frame col-3">
+          <img src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+          <div class = "details">
+            <h1 class="titledetails">PERFUME NAME</h1>
+            <br>
+            <span class="datedetails">LAUNCH DATE</span>
+            <br>
+            <span class="branddetails">BRAND</span>
+            <br>
+            <span class="familydetails">OLFACTIVE FAMILY</span>
+            <br>
+            <span class="perfumeurdetails">PERFUMER</span>
+          </div>
+        </div> 
+        <div class = "frame col-3">
+          <img src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+          <div class = "details">
+            <h1 class="titledetails">PERFUME NAME</h1>
+            <br>
+            <span class="datedetails">LAUNCH DATE</span>
+            <br>
+            <span class="branddetails">BRAND</span>
+            <br>
+            <span class="familydetails">OLFACTIVE FAMILY</span>
+            <br>
+            <span class="perfumeurdetails">PERFUMER</span>
+          </div>
+        </div>
+        <div class = "frame col-3">
+          <img src = "../img/missdior.jpg" alt="Miss Dior - Dior (1947)" title="Miss Dior - Dior (1947)">
+          <div class = "details">
+            <h1 class="titledetails">PERFUME NAME</h1>
+            <br>
+            <span class="datedetails">LAUNCH DATE</span>
+            <br>
+            <span class="branddetails">BRAND</span>
+            <br>
+            <span class="familydetails">OLFACTIVE FAMILY</span>
+            <br>
+            <span class="perfumeurdetails">PERFUMER</span>
+          </div>
+        </div>  
+      </div>
+      <div class="row mt-1 mb-0">
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
+        <div class="col-3 powered">Powered by <a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a></div>
+      </div>
+    </div>
+</div>
+</div> 
 </div>
 </div>
 
