--- a/html/_/index.html
+++ b/html/_/index.html
@@ -574,9 +574,9 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-12 panelcontent">
-    <div class="row mt-1" style="text-align: justify;">
+    <div class="mt-1" style="text-align: justify;">
       <span lang="fr">Afin de vous permettre d'en découvrir d'avantage sur les ingrédients de ScenTree, nous nous sommes associé avec l'emblématique société "<a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a>". Ce partenariat nous permet de vous afficher, pour chaque ingrédient, jusqu'a 8 parfums emblématiques ! </span>
-      <span lang="en">To allow you to discover more about ScenTree's ingredients, we have partnered with the iconic company "Fragrances of the world". This partnership allows us to show you, for each ingredient, up to 8 emblematic fragrances! </span>
+      <span lang="en">To allow you to discover more about ScenTree's ingredients, we have partnered with the iconic company "<a role="button" data-toggle="modal" data-target="#Fotw_modal" href="#">Fragrances of the world</a>". This partnership allows us to show you, for each ingredient, up to 8 emblematic fragrances! </span>
     </div>
     <!--VERSION MOBILE-->
     <div class="mousenotavailable">
