function to set the percentage or a non-set text inside a html element

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1127,17 +1127,17 @@ crossorigin=""/>
                                 </tr>
                                 <!-- CORPS DU TABLEAU-->
                                 <tr>
-                                  <td><span class="modalbody-48-cat1"></span> %</td>
-                                  <td><span class="modalbody-48-cat2"></span> %</td>
-                                  <td><span class="modalbody-48-cat3"></span> %</td>
-                                  <td><span class="modalbody-48-cat4"></span> %</td>
-                                  <td><span class="modalbody-48-cat5"></span> %</td>
-                                  <td><span class="modalbody-48-cat6"></span> %</td>
-                                  <td><span class="modalbody-48-cat7"></span> %</td>
-                                  <td><span class="modalbody-48-cat8"></span> %</td>
-                                  <td><span class="modalbody-48-cat9"></span> %</td>
-                                  <td><span class="modalbody-48-cat10"></span> %</td>
-                                  <td><span class="modalbody-48-cat11"></span> %</td>
+                                  <td><span class="modalbody-48-cat1"></span></td>
+                                  <td><span class="modalbody-48-cat2"></span></td>
+                                  <td><span class="modalbody-48-cat3"></span></td>
+                                  <td><span class="modalbody-48-cat4"></span></td>
+                                  <td><span class="modalbody-48-cat5"></span></td>
+                                  <td><span class="modalbody-48-cat6"></span></td>
+                                  <td><span class="modalbody-48-cat7"></span></td>
+                                  <td><span class="modalbody-48-cat8"></span></td>
+                                  <td><span class="modalbody-48-cat9"></span></td>
+                                  <td><span class="modalbody-48-cat10"></span></td>
+                                  <td><span class="modalbody-48-cat11"></span></td>
                                 </tr>
                               </table>
                             
@@ -1322,15 +1322,15 @@ crossorigin=""/>
                                 </tr>
                                 <!-- CORPS DU TABLEAU-->
                                 <tr>
-                                  <td><span class="modalbody-49-cat1"></span> %</td>
-                                  <td><span class="modalbody-49-cat2"></span> %</td>
-                                  <td><span class="modalbody-49-cat3"></span> %</td>
-                                  <td><span class="modalbody-49-cat4"></span> %</td>
-                                  <td><span class="modalbody-49-cat5A"></span> %</td>
-                                  <td><span class="modalbody-49-cat5B"></span> %</td>
-                                  <td><span class="modalbody-49-cat5C"></span> %</td>
-                                  <td><span class="modalbody-49-cat5D"></span> %</td>
-                                  <td><span class="modalbody-49-cat6"></span> %</td>
+                                  <td><span class="modalbody-49-cat1"></span></td>
+                                  <td><span class="modalbody-49-cat2"></span></td>
+                                  <td><span class="modalbody-49-cat3"></span></td>
+                                  <td><span class="modalbody-49-cat4"></span></td>
+                                  <td><span class="modalbody-49-cat5A"></span></td>
+                                  <td><span class="modalbody-49-cat5B"></span></td>
+                                  <td><span class="modalbody-49-cat5C"></span></td>
+                                  <td><span class="modalbody-49-cat5D"></span></td>
+				  <td><span class="modalbody-49-cat6"></span></td>
                                 </tr>
                                 <tr class="mt-2">
                                   <th>Cat.7A</th>
@@ -1344,15 +1344,15 @@ crossorigin=""/>
                                   <th>Cat.12</th>
                                 </tr>
                                 <tr>
-                                  <td><span class="modalbody-49-cat7A"></span> %</td>
-                                  <td><span class="modalbody-49-cat7B"></span> %</td>
-                                  <td><span class="modalbody-49-cat8"></span> %</td>
-                                  <td><span class="modalbody-49-cat9"></span> %</td>
-                                  <td><span class="modalbody-49-cat10A"></span> %</td>
-                                  <td><span class="modalbody-49-cat10B"></span> %</td>
-                                  <td><span class="modalbody-49-cat11A"></span> %</td>
-                                  <td><span class="modalbody-49-cat11B"></span> %</td>
-                                  <td><span class="modalbody-49-cat12"></span> %</td>
+                                  <td><span class="modalbody-49-cat7A"></span></td>
+                                  <td><span class="modalbody-49-cat7B"></span></td>
+                                  <td><span class="modalbody-49-cat8"></span></td>
+                                  <td><span class="modalbody-49-cat9"></span></td>
+                                  <td><span class="modalbody-49-cat10A"></span></td>
+                                  <td><span class="modalbody-49-cat10B"></span></td>
+                                  <td><span class="modalbody-49-cat11A"></span></td>
+                                  <td><span class="modalbody-49-cat11B"></span></td>
+                                  <td><span class="modalbody-49-cat12"></span></td>
                                 </tr>
                               </table>
                         </div>
