added the 'skin' IFRA table

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1155,9 +1155,9 @@ crossorigin=""/>
                                   <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
                                 </tr>
                                 <tr>
-                                  <td><span class="modalbody-leaveon"></span> %</td>
-                                  <td>X</td>
-                                  <td>X</td>
+                                  <td><span class="modalbody-leave-on"></span></td>
+                                  <td><span class="modalbody-rinse-off"></span></td>
+                                  <td><span class="modalbody-non-skin-contact"></span></td>
                                 </tr>
                               </table>
                             
