added the first 'listy' IFRA table

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1065,12 +1065,7 @@ crossorigin=""/>
                                   <td>CAS N°</td>
                                   <td>Estimated Concentration</td>
                                 </tr>
-                              <tbody>
-                                <tr>
-                                  <td></td>
-                                  <td></td>
-                                  <td></td>
-                                </tr>
+                              <tbody class="ingredients-containing-without-botanicals-48">
                               </tbody>
                         </table>
                       </p>
@@ -1188,13 +1183,7 @@ crossorigin=""/>
                                     <td>CAS N°</td>
                                     <td>Estimated Concentration</td>
                                   </tr>
-                                <tbody>
-                                  <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                  </tr>
+                                <tbody class="ingredients-containing-with-botanicals-48">
                                 </tbody>
                         </table>
                       </p>
@@ -1246,7 +1235,7 @@ crossorigin=""/>
                                   <td>CAS N°</td>
                                   <td>Estimated Concentration</td>
                                 </tr>
-                              <tbody>
+                              <tbody class="ingredients-containing-without-botanicals-49">
                                 
                               </tbody>
                         </table>
@@ -1361,7 +1350,7 @@ crossorigin=""/>
                                   <td>CAS N°</td>
                                   <td>Estimated Concentration</td>
                                 </tr>
-                              <tbody>
+                              <tbody class="ingredients-containing-with-botanicals-49">
                                 
                               </tbody>
                         </table>
@@ -1386,6 +1375,7 @@ crossorigin=""/>
       </div><!--Fermeture du tab-content-->
         <br>
         <!--Block Pictogrammes-->
+	<!--
         <div class="blockpicto">
           <h1 class="item d-inline text-size-16px">
             <span>
@@ -1394,7 +1384,7 @@ crossorigin=""/>
             </span>  
           </h1>
           <span id="TO DEFINE" class="textitem"></span>
-        </div>       
+	</div>-->       
 </div>   
 </div>
 </div>
