added IFRA comments

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1098,7 +1098,7 @@ crossorigin=""/>
                           <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
                         </span>  
                       </h2>
-                      <span class="modalbody-commentifra textitem"></span>
+                      <span class="modalbody-commentifra-48 textitem"></span>
 
                       <!--Blocktable contient tout les tableaux + les paragraphes de responsabilité et le lien vers les modaux IFRA-->
                       <div class="blocktable">
@@ -1269,7 +1269,7 @@ crossorigin=""/>
                           <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
                         </span>  
                       </h2>
-                      <span class="modalbody-commentifra textitem"></span>
+                      <span class="modalbody-commentifra-49 textitem"></span>
                     
                       <div class="blocktable49">
                         <div class="table-responsive text-center mb-2">
