added IFRA number and IFRA restriction name

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1080,7 +1080,7 @@ crossorigin=""/>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
-                      <span class="modalbody-ifra textitem"></span>
+                      <span class="modalbody-ifra-48 textitem"></span>
                       <br>
                       <!--Amendement d'apparition de l'ingrédients concerné-->
                       <h2 class="amendment d-inline text-size-14px">
@@ -1089,7 +1089,7 @@ crossorigin=""/>
                           <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
-                      <span class="modalbody-amendment textitem"></span>
+                      <span class="modalbody-amendment-48 textitem"></span>
                       <br>
                       <!--Commentaires-->
                       <h2 class="commentaires d-inline text-size-14px">
@@ -1251,7 +1251,7 @@ crossorigin=""/>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
-                      <span class="modalbody-ifra49 textitem"></span>
+                      <span class="modalbody-ifra-49 textitem"></span>
                       <br>
                       <!--Amendement d'apparition de l'ingrédients concerné-->
                       <h2 class="amendment49 d-inline text-size-14px">
@@ -1260,7 +1260,7 @@ crossorigin=""/>
                           <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
-                      <span class="modalbody-amendment textitem"></span>
+                      <span class="modalbody-amendment-49 textitem"></span>
                       <br>
                       <!--Commentaires-->
                       <h2 class="commentaires49 d-inline text-size-14px">
