active tab = 49th IFRA amendment

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -617,7 +617,7 @@ crossorigin=""/>
             </div><!--Fermeture du 48th amendement-->
 
             <!--Ouverture du 49th amendement-->
-            <div class="tab-pane fade" id="tab49info"   role="tabpanel" aria-labelledby="pills-tab49">
+            <div class="tab-pane fade  show active" id="tab49info"   role="tabpanel" aria-labelledby="pills-tab49">
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-12">
@@ -1179,7 +1179,7 @@ crossorigin=""/>
             </div><!--Fermeture du 48th amendement-->
 
             <!--Ouverture du 49th amendement-->
-            <div class="tab-pane fade" id="tab49sinfo"   role="tabpanel" aria-labelledby="pills-tab49s">
+            <div class="tab-pane fade  show active" id="tab49sinfo"   role="tabpanel" aria-labelledby="pills-tab49s">
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-12">
