--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -188,14 +188,35 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
-          <h3 id="heading19"><span lang="fr">8 mars 2020</span><span lang="en">8<sup>th</sup> march 2020</span>
+          <h3 id="heading22"><span lang="fr">15 mars 2020</span><span lang="en">15<sup>th</sup> march 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
+          </h3>
+          <p>
+              <a class="interpop"  href="../ingredients/Helvetolide®__Helvétolide®.html"><span lang="en">Helvetolide<sup>®</sup> (CAS N°: 141773-73-1)</span><span lang="fr">Helvétolide<sup>®</sup> (CAS N°: 141773-73-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Gamma-Damascone®__Damascone-Gamma®.html"><span lang="en">Gamma-Damascone<sup>®</sup> (CAS N°: 35087-49-1)</span><span lang="fr">Damascone-Gamma<sup>®</sup> (CAS N°: 35087-49-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Delta-Damascone®__Damascone-Delta®.html"><span lang="en">Delta-Damascone<sup>®</sup> (CAS N°: 57378-68-4)</span><span lang="fr">Damascone-Delta<sup>®</sup> (CAS N°: 57378-68-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Estragole__Estragole.html"><span lang="en">Estragole (CAS N°: 140-67-0)</span><span lang="fr">Estragole (CAS N°: 140-67-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Furfural__Furfural.html"><span lang="en">Furfural (CAS N°: 98-01-1)</span><span lang="fr">Furfural (CAS N°: 98-01-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/4-Vinyl_Guaiacol__4-Vinyl_Guaiacol.html"><span lang="en">4-Vinyl Guaiacol (CAS N°: 7786-61-0)</span><span lang="fr">4-Vinyl Guaiacol (CAS N°: 7786-61-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/2-méthoxy-3-isopropyl_Pyrazine__2-méthoxy-3-isopropyl_Pyrazine.html"><span lang="en">2-méthoxy-3-isopropyl Pyrazine (CAS N°: 25773-40-4)</span><span lang="fr">2-méthoxy-3-isopropyl Pyrazine (CAS N°: 25773-40-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Dynamone®__Dynamone®.html"><span lang="en">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span><span lang="fr">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span></a>
+          </p>
+          <p>
+            <u><span lang="fr">Intégration de l'ensemble du 49th amendement de l'IFRA</span>
+               <span lang="en">Integration of the 49th IFRA amendment</span></u>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
+          <h3 id="heading21"><span lang="fr">8 mars 2020</span><span lang="en">8<sup>th</sup> march 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h3>
           <p>
               <a class="interpop"  href="../ingredients/Sichuan_Pepper_Absolute__Poivre_du_Sichuan_Absolue.html"><span lang="en">Sichuan Pepper Absolute (CAS N°: 102242-62-6)</span><span lang="fr">Poivre du Sichuan Absolue (CAS N°: 102242-62-6)</span></a>
               <br><a class="interpop"  href="../ingredients/Methyl_Laitone®__Méthyl_Laitone®.html"><span lang="en">Methyl Laitone<sup>®</sup> (CAS N°: 94201-19-1)</span><span lang="fr">Méthyl Laitone<sup>®</sup> (CAS N°: 94201-19-1)</span></a>
               <br><a class="interpop"  href="../ingredients/Anisyl_Alcohol__Alcool_Anisique.html"><span lang="en">Anisyl Alcohol (CAS N°: 105-13-5)</span><span lang="fr">Alcool Anisique (CAS N°: 105-13-5)</span></a>
-              <br><a class="interpop"  href="../ingredients/Tagetes_EO__Tagète_HE.html"><span lang="en">Tagetes_EO (CAS N°: 8016-84-0)</span><span lang="fr">Tagète HE (CAS N°: 8016-84-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Tagetes_EO__Tagète_HE.html"><span lang="en">Tagetes EO (CAS N°: 8016-84-0)</span><span lang="fr">Tagète HE (CAS N°: 8016-84-0)</span></a>
               <br><a class="interpop"  href="../ingredients/Hyssop_EO__Hysope_HE.html"><span lang="en">Hyssop EO (CAS N°: 8006-83-5)</span><span lang="fr">Hysope HE (CAS N°: 8006-83-5)</span></a>
               <br><a class="interpop"  href="../ingredients/Lemonile®__Lemonile®.html"><span lang="en">Lemonile<sup>®</sup> (CAS N°: 61792-11-8)</span><span lang="fr">Lemonile<sup>®</sup> (CAS N°: 61792-11-8)</span></a>
               <br><a class="interpop"  href="../ingredients/Peonile®__Peonile®.html"><span lang="en">Peonile<sup>®</sup> (CAS N°: 10461-98-0)</span><span lang="fr">Peonile<sup>®</sup> (CAS N°: 10461-98-0)</span></a>
@@ -252,10 +273,9 @@ crossorigin=""/>
       <li>
         <div class="content">
           <h3 id="heading19"><span lang="fr">16 février 2020</span><span lang="en">16<sup>th</sup> february 2020</span>
-            <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
           </h3>
           <p>
-              <a class="interpop"  href="../ingredients/Dynamone®__Dynamone®.html"><span lang="en">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span><span lang="fr">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span></a>
               <br><a class="interpop"  href="../ingredients/Cypriol_EO__Cypriol_HE.html"><span lang="en">Cypriol EO (CAS N°: 68916-60-9)</span><span lang="fr">Cypriol HE (CAS N°: 68916-60-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Cosmone®__Cosmone®.html"><span lang="en">Cosmone<sup>®</sup> (CAS N°: 259854-70-1)</span><span lang="fr">Cosmone<sup>®</sup> (CAS N°: 259854-70-1)</span></a>
               <br><a class="interpop"  href="../ingredients/Pharaone®__Pharaone®.html"><span lang="en">Pharaone<sup>®</sup> (CAS N°: 313973-37-4)</span><span lang="fr">Pharaone<sup>®</sup> (CAS N°: 313973-37-4)</span></a>
