--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -202,7 +202,7 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Dynamone®__Dynamone®.html"><span lang="en">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span><span lang="fr">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span></a>
           </p>
           <p>
-            <u><span lang="fr">Intégration de l'ensemble du 49th amendement de l'IFRA</span>
+            <u><span lang="fr">Intégration des standards du 49th amendement de l'IFRA</span>
                <span lang="en">Integration of the 49th IFRA amendment</span></u>
           </p>
         </div>
